--- a/public/stylesheets/house-of-cards.css
+++ b/public/stylesheets/house-of-cards.css
@@ -12,7 +12,7 @@ body, html {
 }
 
 .fixed_in_space {
-	position:fixed;
+	position:fixed !important;
 }
 
 .invisible_body {
@@ -21,9 +21,13 @@ body, html {
 }
 
 #canvas {
-	position:fixed;
+	position:fixed !important;
 	z-index:5;
 	width:100%;
 	height:100%;
 	padding:20px;
+}
+
+.hidden_box2d_element {
+	display:none !important;
 }
